trunk/Archive2/79/0e67beb4326e2f/output
main.cpp:7:6: warning: ISO C++ forbids declaration of 'main' with no type [-Wpedantic]
 main()
      ^
main.cpp: In function 'int main()':
main.cpp:11:9: warning: variable 'num' set but not used [-Wunused-but-set-variable]
     int num;
         ^
main.cpp: In function 'int getline2(char*, int)':
main.cpp:42:6: warning: ISO C++ forbids taking address of function '::main' [-Wpedantic]
 main(){
      ^
main.cpp:42:7: error: expected ';' before '{' token
 main(){
       ^
main.cpp:35:9: warning: unused variable 'c' [-Wunused-variable]
     int c, i;
         ^
main.cpp:35:12: warning: unused variable 'i' [-Wunused-variable]
     int c, i;
            ^
main.cpp:36:10: warning: unused variable 'spike' [-Wunused-variable]
     char spike[lim]; /* авторский костыль */
          ^
main.cpp:60:1: error: expected '}' at end of input
 }
 ^
main.cpp:60:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
